plugins-dev/historic-data/historicdata/RemotePosition: Fix Java9+ deprecation for new Long.